--- a/role.yml
+++ b/role.yml
@@ -1,7 +1,14 @@
 # Add this role to your /etc/elasticsearch/roles.yml
 # Make sure the name of the index matches the one configured in your /etc/fs2es-indexer/config.yml !
 
+# This role is for the administration of the index, e. g. creating, updating, ...
 fs2es-indexer:
   indices:
     - names: [ 'files' ]
       privileges: [ 'all' ]
+
+# This role is for reading the index, e. g. Samba
+fs2es-indexer-ro:
+  indices:
+    - names: [ 'files' ]
+      privileges: [ 'read' ]
