--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,9 +8,9 @@ readme = "README.md"
 repository = "https://github.com/Ellerhold/fs2es-indexer"
 
 [tool.poetry.dependencies]
-python = "^3.10"
-PyYAML = "^6.0"
-elasticsearch = "^8.2.0"
+python = "^3.9"
+PyYAML = ">5=.0"
+elasticsearch = "^8.0"
 
 [tool.poetry.dev-dependencies]
 
