--- a/es-index-mapping.json
+++ b/es-index-mapping.json
@@ -44,7 +44,7 @@
                 }
             },
             "time": {
-                "type": "unsigned_long"
+                "type": "long"
             }
         }
     }
