--- a/config.dist.yml
+++ b/config.dist.yml
@@ -47,7 +47,7 @@ elasticsearch:
   ssl_show_warn: True
 
   # The path to the file containing all valid CA certificates
-  # Shouldnt be necessary because "certifi" will be installed as a dependency
+  # Shouldn't be necessary because "certifi" will be installed as a dependency
   #ca_certs: '/etc/ssl/certs/ca-certificates.crt'
 
   # The version of the elasticsearch-library
@@ -64,9 +64,15 @@ elasticsearch:
   # But as of Samba 4.16.9 this is not used yet.
   add_additional_fields: False
 
-# The wait time between indexing runs
+# The wait time between indexing runs in "daemon" mode
 # Allowed suffixes: s (seconds), m (minutes), h (hours), d (days)
 wait_time: "30m"
+
+# Options for the samba integration
+samba:
+  # The "daemon" mode can parse the audit log of samba during the "wait_time" to get changes while waiting
+  # See README.md for more information
+  audit_log: /var/log/samba/audit.log
 
 # Do you want to the dump raw documents json to /tmp/fs2es-indexer-failed-documents-%date%.json
 # in case it cant be indexed by elasticsearch?
