--- a/config.dist.yml
+++ b/config.dist.yml
@@ -74,6 +74,9 @@ samba:
   # See README.md for more information
   audit_log: /var/log/samba/audit.log
 
+  # How long should the indexer sleep() before looking into the audit log file again (in seconds) ?
+  monitor_sleep_time: 1
+
 # Do you want to the dump raw documents json to /tmp/fs2es-indexer-failed-documents-%date%.json
 # in case it cant be indexed by elasticsearch?
 dump_documents_on_error: False
