fix rsyslog config

--- a/rsyslog-smbd_audit.conf
+++ b/rsyslog-smbd_audit.conf
@@ -1,7 +1,7 @@
 # Redirects the messages from "smbd_audit" in its own file and removes them from the normal syslog
 # See https://www.rsyslog.com/doc/v8-stable/configuration/filters.html
 
-if $programname isequal "smbd_audit" then {
+if $programname == "smbd_audit" then {
   # These message are not interesting to us:
   # - "openat" also logs open with the read only flag, we only want see writing open's
   # - Adding / modifying / deleting xattrs are logged via "<path>:<xattr>" - we're not interested in those!
