try index: false on path.real so Samba only searches on the filename not the whole path

--- a/es-index-mapping.json
+++ b/es-index-mapping.json
@@ -6,6 +6,7 @@
                     "real": {
                         "type": "keyword",
                         "store": true,
+                        "index": false,
                         "fields": {
                             "tree": {
                                 "type": "text",
@@ -44,7 +45,7 @@
                 }
             },
             "time": {
-                "type": "long"
+                "type": "unsigned_long"
             }
         }
     }
