try index: false on path.real so Samba only searches on the filename not the whole path 2

--- a/es-index-mapping.json
+++ b/es-index-mapping.json
@@ -10,10 +10,12 @@
                         "fields": {
                             "tree": {
                                 "type": "text",
-                                "fielddata": true
+                                "fielddata": true,
+                                "index": false
                             },
                             "fulltext": {
-                                "type": "text"
+                                "type": "text",
+                                "index": false
                             }
                         }
                     }
