REVERT "try index: false on path.real so Samba only searches on the filename not the whole path"

--- a/es-index-mapping.json
+++ b/es-index-mapping.json
@@ -6,7 +6,15 @@
                     "real": {
                         "type": "keyword",
                         "store": true,
-                        "index": false
+                        "fields": {
+                            "tree": {
+                                "type": "text",
+                                "fielddata": true
+                            },
+                            "fulltext": {
+                                "type": "text"
+                            }
+                        }
                     }
                 }
             },
