--- a/es-index-mapping.json
+++ b/es-index-mapping.json
@@ -6,6 +6,7 @@
                     "real": {
                         "type": "keyword",
                         "store": true,
+                        "index": false,
                         "fields": {
                             "tree": {
                                 "type": "text",
