try index:false again 2

--- a/es-index-mapping.json
+++ b/es-index-mapping.json
@@ -13,7 +13,8 @@
                                 "fielddata": true
                             },
                             "fulltext": {
-                                "type": "text"
+                                "type": "text",
+                                "index": false
                             }
                         }
                     }
