--- a/es-index-mapping.json
+++ b/es-index-mapping.json
@@ -43,7 +43,7 @@
                     }
                 }
             },
-            "time": {
+            "index_time": {
                 "type": "unsigned_long"
             }
         }
