improve syslog filter, more+better verbose logging

--- a/rsyslog-smbd_audit.conf
+++ b/rsyslog-smbd_audit.conf
@@ -5,7 +5,7 @@ if $programname == "smbd_audit" then {
   # These message are not interesting to us:
   # - "openat" also logs open with the read only flag, we only want see writing open's
   # - Adding / modifying / deleting xattrs are logged via "<path>:<xattr>" - we're not interested in those!
-  if $msg contains "|openat|ok|r|" or $msg contains ":com.apple.macl" or $msg contains ":AFP_AfpInfo" or $msg contains ":com.apple.lastuseddate" or $msg contains ":com.apple.quarantine" then stop
+  if $msg contains "|openat|ok|r|" or $msg contains ":com.apple." or $msg contains ":AFP_AfpInfo" then stop
 
   # Everything else from smbd_audit: write to its own file
   *.* -/var/log/samba/audit.log
