--- a/rsyslog-smbd_audit.conf
+++ b/rsyslog-smbd_audit.conf
@@ -3,9 +3,8 @@
 
 if $programname == "smbd_audit" then {
   # These message are not interesting to us:
-  # - "openat" also logs open with the read only flag, we only want see writing open's
   # - Adding / modifying / deleting xattrs are logged via "<path>:<xattr>" - we're not interested in those!
-  if $msg contains "|openat|ok|r|" or $msg contains ":com.apple." or $msg contains ":AFP_AfpInfo" then stop
+  if $msg contains ":com.apple." or $msg contains ":AFP_AfpInfo" then stop
 
   # Everything else from smbd_audit: write to its own file
   *.* -/var/log/samba/audit.log
