create a changes watcher and refactor out the audit.log changes watcher

--- a/config.dist.yml
+++ b/config.dist.yml
@@ -64,12 +64,18 @@ wait_time: "30m"
 
 # Options for the samba integration
 samba:
-  # The "daemon" mode can parse the audit log of samba during the "wait_time" to get changes while waiting
+  # How long should the indexer sleep() before looking into the audit.log file or the fanotify again (in seconds) ?
+  # TODO noch notwendig mit fanotify?
+  monitor_sleep_time: 1
+
+  # The "daemon" mode can parse the audit.log of samba during the "wait_time" to get changes while waiting
   # See README.md for more information
   audit_log: "/var/log/samba/audit.log"
 
-  # How long should the indexer sleep() before looking into the audit log file again (in seconds) ?
-  monitor_sleep_time: 1
+  # Instead of monitoring the samba audit.log, fs2es-indexer can use fanotify to get informed about changes
+  # to files and directories in the monitored directories
+  # You need to install pyfanotify and your filesystem must support it!
+  use_fanotify: False
 
 # Do you want to the dump raw documents json to /tmp/fs2es-indexer-failed-documents-%date%.json
 # in case it cant be indexed by elasticsearch?
