Restore mapping for "path.real.fulltext" because Samba will segmentation fault otherwise

--- a/es-index-mapping.json
+++ b/es-index-mapping.json
@@ -5,7 +5,12 @@
                 "properties": {
                     "real": {
                         "type": "keyword",
-                        "store": true
+                        "store": true,
+                        "fields": {
+                            "fulltext": {
+                                "type": "text"
+                            }
+                        }
                     }
                 }
             },
