extract settings as JSON file

--- a/config.dist.yml
+++ b/config.dist.yml
@@ -58,6 +58,9 @@ elasticsearch:
   # The file where the mapping for the ElasticSearch index is saved.
   index_mapping: "/opt/fs2es-indexer/es-index-mapping.json"
 
+  # The file where the settings for the ElasticSearch index is saved.
+  index_settings: "/opt/fs2es-indexer/es-index-settings.json"
+
 # The wait time between indexing runs in "daemon" mode
 # If you have no changes watcher, your user will only get stale data - so new files will show up in a spotlight search
 # later if you increase this wait_time. The same is true for deletions and renames.
