Add the json files to DEBIAN/conffiles, CHANGELOG

--- a/DEBIAN/control
+++ b/DEBIAN/control
@@ -6,5 +6,5 @@ Architecture: all
 Depends: python3-yaml, python3-venv
 Maintainer: Ellerhold IT <it@ellerhold.de>
 Description: fs2es-indexer
- This tool indexes your directories into an elastic search index and prepares them for searching via Mac OS Spotlight
+ This tool indexes your directories into an elasticsearch index and prepares them for searching via the Mac OS Spotlight
  search in a samba file server.
