file.filename.fulltext is need for searches with a dot in it

--- a/config/es-index-mapping.json
+++ b/config/es-index-mapping.json
@@ -19,7 +19,12 @@
                     "filename": {
                         "type": "text",
                         "store": true,
-                        "analyzer": "fs2es-indexer-analyzer"
+                        "analyzer": "fs2es-indexer-analyzer",
+                        "fields": {
+                            "fulltext": {
+                                "type": "text"
+                            }
+                        }
                     }
                 }
             }
