Add indexing of file last modified

--- a/config/es-index-mapping.json
+++ b/config/es-index-mapping.json
@@ -25,6 +25,10 @@
                                 "type": "text"
                             }
                         }
+                    },
+                    "last_modified": {
+                        "type": "date",
+                        "format": "epoch_second"
                     }
                 }
             }
