--- a/config/es-index-mapping.json
+++ b/config/es-index-mapping.json
@@ -28,7 +28,7 @@
                     },
                     "last_modified": {
                         "type": "date",
-                        "format": "epoch_second"
+                        "format": "strict_date_optional_time||epoch_second"
                     }
                 }
             }
